# ubuntu-archive-rebuilder

./: .gitignore  README.md
.github/workflows/: pages.yml
backend/: Cargo.toml  packages-medium.txt  packages-noble-FULL.txt  packages-resolute-FULL.txt  packages-smoke.txt  packages.txt
backend/migrations/: 001_initial.sql  002_findings_severity.sql  003_findings_class.sql  004_build_log_blob.sql  005_arch_and_component.sql  006_repair_findings_fk.sql  007_oom_retry_metadata.sql
backend/scripts/: run-matrix.sh
backend/src/: db.rs  export.rs  importer.rs  lib.rs  main.rs  models.rs
backend/src/analyzer/: mod.rs  patterns.rs
backend/src/builder/: cgroup.rs  mod.rs  sbuild.rs  source.rs  time_parser.rs
backend/src/builder/scripts/: chroot_setup.sh  gcc_verify.sh  sbuild_config.pl.tmpl  starting_build.sh
frontend/: README.md  app.js  index.html  style.css
frontend-data/: .gitignore
pipeline/: Cargo.toml
pipeline/migrations/: 001_initial.sql
pipeline/scripts/: run-series-matrix.sh  run-test-matrix.sh
pipeline/src/: db.rs  export.rs  importer.rs  main.rs  models.rs  profile.rs
pipeline/src/analyzer/: mod.rs
pipeline/src/builder/: mod.rs  sbuild.rs
profiles/: clang-14-jammy-vanilla.toml  clang-14-jammy.toml  clang-19-noble.toml  clang-20-noble.toml  clang-21-resolute-vanilla.toml  clang-21-resolute.toml  gcc-11-jammy.toml  gcc-14-noble.toml  gcc-15-resolute.toml
tests/: verify-clang-wrapper.sh
viewer/: README.md  app.js  index.html  style.css
